<resources>
    <string name="app_name">ChAt</string>
    <string name="title_activity_start">startActivity</string>
    <string name="welcome_to_chat">WELCOME TO ChAt</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="log_out">log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
